fix: adjusting the overflow bar

--- a/src/pages/Dashboard/productsListAdminview/index.module.scss
+++ b/src/pages/Dashboard/productsListAdminview/index.module.scss
@@ -71,3 +71,9 @@
     flex-wrap: wrap;
   }
 }
+
+@media (min-width: 1348px) {
+  .productList__container {
+    overflow: hidden;
+  }
+}
